--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/landscape.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Hi, you can call me Khoir 
   <br><br>
-  <a href="https://www.instagram.com/khoirunniswatin_/">View My Instagram Profile</a> 
+  <a href="https://www.instagram.com/khoirunniswatin_/">Take a Look at My Instagram Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
