--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Khoirun Niswatin # your name (or website title) here
-logo: "/images/khoir200.jpg?raw=true" # your photo (or logo) here
+logo: "/images/khoir.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Hi, you can call me Khoir 
   <br><br>
